# ACW-GenAI-UniversalTranslator

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
Infra/: deploy.sh  infra.bicep
SampleConsoleApp/: ACW-GenAI-UniversalTranslator.csproj  Program.cs  TranslateResponseModel.cs  example-appsettings.json
SampleConsoleAppCpp/: CMakeLists.txt  Program.cpp
SampleConsoleAppGo/: config.go  main.go
SampleConsoleAppJS/: Program.js  config.json
SampleConsoleAppJava/: Program.java  TranslateResponseModel.java  pom.xml
SampleConsoleAppPython/: Program.py  config.json
